<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <EditTextPreference
            app:key="@string/key_name"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="white"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="@string/key_color"
            app:title="@string/color_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/noti_header">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/noti_title" />

        <SwitchPreferenceCompat
            app:dependency="notifications"
            app:key="type"
            app:summaryOff="@string/type_summary_off"
            app:summaryOn="@string/type_summary_on"
            app:title="@string/noti_type_title" />

    </PreferenceCategory>

</PreferenceScreen>
