<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShareActivity">

        <TextView
            android:id="@+id/share_note_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="40dp"
            />

        <TextView
            android:id="@+id/share_note_course"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            android:layout_below="@id/share_note_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_note_course"
            />
        <Spinner
            android:id="@+id/spinner_course"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/share_note_course"
            />

        <TextView
            android:id="@+id/share_note_module"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_note_module"
            android:layout_below="@id/spinner_course"
            />
        <Spinner
            android:id="@+id/spinner_module"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/share_note_module"
            android:hint="Enter name of module"
            />

        <TextView
            android:id="@+id/share_note_title"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_note_title"
            android:layout_below="@id/spinner_module"
            />
        <EditText
            android:id="@+id/edit_title"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/share_note_title"
            android:inputType="textMultiLine"
            android:hint="Enter the title of your notes"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            />

        <TextView
            android:id="@+id/share_note_notes"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_note_notes"
            android:layout_below="@id/edit_title"
            />
        <EditText
            android:id="@+id/edit_notes"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/share_note_notes"
            android:inputType="textMultiLine"
            android:hint="Enter your notes here"
            />


        <Button
            android:id="@+id/add_note_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@id/edit_notes"
            android:layout_marginTop="8dp"
            android:onClick="addNotes"
            />

    </RelativeLayout>
</ScrollView>